homelab/k8s/home-assistant-forward/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: homeassistant
  labels:
    kubernetes.io/service-name: homeassistant
addressType: IPv4
ports:
  - name: app
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "192.168.10.2"
    conditions:
      ready: true
