homelab/k8s/home-assistant-forward/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  ports:
    - port: 8123
      name: app
      protocol: TCP
      targetPort: app
  clusterIP: None
  type: ClusterIP
